PP-368: Fix frontpage calendar notice alignment.

--- a/public/themes/custom/helfi_paatokset/src/scss/components/block/_frontpage_calendar.scss
+++ b/public/themes/custom/helfi_paatokset/src/scss/components/block/_frontpage_calendar.scss
@@ -149,6 +149,6 @@
 }
 
 .frontpage-calendar__notice {
-  padding-left: 12px;
-  padding-top: 12px;
+  margin-bottom: 24px;
+  margin-top: -24px;
 }
